--- a/index.html
+++ b/index.html
@@ -157,48 +157,48 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="skills padd-15" class="skills-card">
+                                <div class="skills padd-15" >
                                     <div class="row">
                                         <div class="section-title padd-15">
                                             <h2 id="skills">Skills</h2>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 ><i class="skills-card-img" class="fa-brands fa-html5" ></i> HTML</h5>
+                                            <h5 ><i  class="fa-brands fa-html5" ></i> HTML</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:92%"></div>
                                                 <div class="skill-percent">92%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 > <i class="skills-card-img" class="fa-brands fa-css3" ></i>CSS</h5>
+                                            <h5 > <i  class="fa-brands fa-css3" ></i>CSS</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:84%"></div>
                                                 <div class="skill-percent">84%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 > <i class="skills-card-img" class="fa-brands fa-js" ></i>   JavaScript</h5>
+                                            <h5 > <i  class="fa-brands fa-js" ></i>   JavaScript</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:96%"></div>
                                                 <div class="skill-percent">96%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 > <i class="skills-card-img" class="fa-brands fa-java" ></i>Java</h5>
+                                            <h5 > <i  class="fa-brands fa-java" ></i>Java</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:82%"></div>
                                                 <div class="skill-percent">82%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 > <i class="skills-card-img" class="fa-solid fa-database" ></i> MySQL</h5>
+                                            <h5 > <i  class="fa-solid fa-database" ></i> MySQL</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:80%"></div>
                                                 <div class="skill-percent">80%</div>
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5 > <i class="skills-card-img" class="fa-brands fa-python" ></i>Python</h5>
+                                            <h5 > <i  class="fa-brands fa-python" ></i>Python</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width:66%"></div>
                                                 <div class="skill-percent">66%</div>
@@ -332,14 +332,14 @@
                             <h2>Services</h2>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" class="skills-card">
                         <!-- service item strat  -->
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-laptop-code"></i>
+                                    <i class="fa fa-laptop-code" class="skills-card-img"></i>
                                 </div>
-                                <h4>Web Applications</h4>
+                                <h4 class="skills-card-name">Web Applications</h4>
                                 <p>Leverage our backend web development services to ensure smooth and high 
                                     website performance. Whether it’s a large-scale system, web portal, 
                                     or IoT infrastructures, our team of web developers will
@@ -351,9 +351,9 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-mobile-alt"></i>
+                                    <i class="fa fa-mobile-alt" class="skills-card-img"></i>
                                 </div>
-                                <h4>Mobile App Back-End Development</h4>
+                                <h4 class="skills-card-name">Mobile App Back-End Development</h4>
                                 <p>Our team of back-end developers assists businesses in building robust 
                                     mobile back-end apps across multiple devices and platforms. 
                                     We create fault-tolerant back ends for native and 
@@ -365,9 +365,9 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-quinscape"></i>
+                                    <i class="fa fa-quinscape" class="skills-card-img"></i>
                                 </div>
-                                <h4>API Development and Integration</h4>
+                                <h4 class="skills-card-name">API Development and Integration</h4>
                                 <p>We can build a custom API to amplify your existing software or connect
                                      it with third-party services. Integrate your interface with other apps, 
                                      devices, and business systems seamlessly and hassle-free.</p>
@@ -378,9 +378,9 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-cloud"></i>
+                                    <i class="fa fa-cloud" class="skills-card-img"></i>
                                 </div>
-                                <h4>Cloud Back-End Solutions</h4>
+                                <h4 class="skills-card-name">Cloud Back-End Solutions</h4>
                                 <p>Software renders backend development services to support your cloud infrastructure.
                                      Our back-end systems handle heavy loads and scale up and down, eliminating latency issues. We also implement 
                                     cutting-edge functionality to deliver innovative products to the end user.</p>
@@ -391,9 +391,9 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-search"></i>
+                                    <i class="fa fa-search" class="skills-card-img"></i>
                                 </div>
-                                <h4>Backend Refactoring</h4>
+                                <h4 class="skills-card-name">Backend Refactoring</h4>
                                 <p>Failing to get optimum app performance? Devox Software’s developers can rehaul the entire solution
                                      infrastructure leaving the front end intact. Rebuild existing systems to reduce technical costs and enhance the code.</p>
                             </div>
@@ -403,9 +403,9 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-user-pen"></i>
+                                    <i class="fa fa-user-pen" class="skills-card-img"></i>
                                 </div>
-                                <h4>Custom Development</h4>
+                                <h4 class="skills-card-name">Custom Development</h4>
                                 <p>Looking for a backend company to implement your business idea? Contact us for a bespoke back-end infrastructure. 
                                     Upgrade, enhance, or migrate your back-ends at speed and affordable costs.</p>
                             </div>
@@ -463,7 +463,7 @@
                                     <p>A collaborative project built by a team of 4 members.</p>
                                 </div>
                                 <div class="portfolio-a">
-                                    <a class="omg"  class="project-github-link" href="https://github.com/Deepak-25yadav/wicked-edge-6587">Github link</a>
+                                    <a class="omg" class="project-github-link" href="https://github.com/Deepak-25yadav/wicked-edge-6587">Github link</a>
                                     <a class="omg" class="project-deployed-link" href="https://magnificent-bonbon-8ffb8d.netlify.app/">Check it out!</a>
                                 </div>
                             </div>
