--- a/index.html
+++ b/index.html
@@ -149,11 +149,12 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
-                                            <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-2">View Online</a>
-                                            <a href="resume.pdf" download id="resume-button-2">Download PDF</a>
+                                            
+                                            <!-- <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-2">View Online</a>
+                                            <a href="resume.pdf" download id="resume-button-2">Download PDF</a> -->
                                             <!-- <a href="resume.pdf" class="btn" id="resume-link-2" target="_blank" download >Download CV</a> -->
-                                            <!-- <div class="row">
+                                            <div class="row">
+                                                <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                                                 <div class="col-lg-6">
                                                   <div class="resume-btn">
                                                     <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-2">View Online</a>
@@ -164,7 +165,7 @@
                                                     <a href="resume.pdf" download id="resume-button-2">Download PDF</a>
                                                   </div>
                                                 </div>
-                                              </div> -->
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -767,8 +768,22 @@
             <section id="resume">
                 <h2>If You Want Download My Resume, Please click here! </h2>
                 <!-- <a href="resume.pdf" id="resume-link-1"  target="_blank" download >Download Resume</a> -->
-                <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-1">View Online</a>
-                <a href="resume.pdf" download id="resume-button-1">Download PDF</a>
+                <!-- <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-1">View Online</a>
+                <a href="resume.pdf" download id="resume-button-1">Download PDF</a> -->
+
+
+                <div class="row">
+                    <div class="col-lg-6">
+                      <div class="resume-btn">
+                        <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-1">View Online</a>
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <div class="resume-btn">
+                        <a href="resume.pdf" download id="resume-button-1">Download PDF</a>
+                      </div>
+                    </div>
+                </div>
             </section>
 
             <!-- <section id="resume">
