--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 progressive organization with opportunities
                                 to work onsignificant projects.
                             </p>
-                            <a href="resume.pdf" download="MyResume.pdf" target="_blank" id="resume-link-2">Download Resume</a>
+                            <a href="Resume.pdf" download target="_blank" id="resume-link-2">Download Resume</a>
                         </div> 
                         <div class="home-imag padd-15">
                             <img  src="images/professional-photo.jpg" alt="My professional photo" class="home-img">
@@ -137,7 +137,7 @@
                                             
                                             <!-- <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-2">View Online</a>
                                             <a href="resume.pdf" download id="resume-button-2">Download PDF</a> -->
-                                            <a href="resume.pdf" class="btn"  target="_blank" download >Download CV</a>
+                                            <a href="Resume.pdf" class="btn"  target="_blank" download >Download CV</a>
 
                                             <!-- <a href="resume.pdf" target="_blank" download id="resume-link-2">
                                                 <button id="resume-button-2">Download Resume</button>
@@ -762,7 +762,7 @@
                 <a href="resume.pdf" download id="resume-button-1">Download PDF</a> -->
 
 
-                <a href="resume.pdf" download="MyResume.pdf" target="_blank" id="resume-link-1">Download Resume</a>
+                <a href="Resume.pdf" download target="_blank" id="resume-link-1">Download Resume</a>
                   
 
                 <!-- <div class="row">
