--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            
+                                            <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                                             <!-- <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-2">View Online</a>
                                             <a href="resume.pdf" download id="resume-button-2">Download PDF</a> -->
-                                            <a href="Resume.pdf" class="btn"  target="_blank" download >Download CV</a>
+                                            <a href="Resume.pdf" class="btn" download >Download CV</a>
 
                                             <!-- <a href="resume.pdf" target="_blank" download id="resume-link-2">
                                                 <button id="resume-button-2">Download Resume</button>
