--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="#home"  class="nav-link home" class="active"><i class="fa fa-home"></i>Home</a></li>
                     <li><a href="#about"  class="nav-link about"><i class="fa fa-user"></i>About</a></li>
                     <li><a href="#skills"  class="nav-link skills"><i class="fa fa-cogs"></i>Skills</a></li>
-                    <li><a href="#services"  class="nav-link services"><i class="fa fa-list"></i>Services</a></li>
+                    <!-- <li><a href="#services"  class="nav-link services"><i class="fa fa-list"></i>Services</a></li> -->
                     <li><a href="#projects"  class="nav-link projects"><i class="fa fa-briefcase"></i>Projects</a></li>
                     <li><a href="#contact"  class="nav-link contact"><i class="fa fa-comments"></i>Contact</a></li>
                     <li><a href="#resume"  class="nav-link resume"><i class="fa fa-briefcase"></i>Resume</a></li>
@@ -58,7 +58,9 @@
                                 progressive organization with opportunities
                                 to work onsignificant projects.
                             </p>
-                            <a href="Resume.pdf" download  id="resume-link-2">Download Resume</a>
+                            <!-- <a href="Resume.pdf" download  id="resume-link-2">Download Resume</a> -->
+                            <button id="resume-button-2" onclick="window.open('Resume.pdf', '_blank')" type="button">Download Resume</button>
+
                         </div> 
                         <div class="home-imag padd-15">
                             <img  src="images/professional-photo.jpg" alt="My professional photo" class="home-img">
@@ -762,7 +764,7 @@
                 <a href="resume.pdf" download id="resume-button-1">Download PDF</a> -->
 
 
-                <a href="Resume.pdf" download target="_blank" id="resume-link-1">Download Resume</a>
+                <button id="resume-button-1" onclick="window.open('Resume.pdf', '_blank')" type="button">Download Resume</button>
                   
 
                 <!-- <div class="row">
