--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="#home"  class="nav-link home" class="active"><i class="fa fa-home"></i>Home</a></li>
                     <li><a href="#about"  class="nav-link about"><i class="fa fa-user"></i>About</a></li>
                     <li><a href="#skills"  class="nav-link skills"><i class="fa fa-cogs"></i>Skills</a></li>
-                    <!-- <li><a href="#services"  class="nav-link services"><i class="fa fa-list"></i>Services</a></li> -->
+                    <li><a href="#services"  class="nav-link services"><i class="fa fa-list"></i>Services</a></li>
                     <li><a href="#projects"  class="nav-link projects"><i class="fa fa-briefcase"></i>Projects</a></li>
                     <li><a href="#contact"  class="nav-link contact"><i class="fa fa-comments"></i>Contact</a></li>
                     <li><a href="#resume"  class="nav-link resume"><i class="fa fa-briefcase"></i>Resume</a></li>
@@ -58,8 +58,8 @@
                                 progressive organization with opportunities
                                 to work onsignificant projects.
                             </p>
-                            <!-- <a href="Resume.pdf" download  id="resume-link-2">Download Resume</a> -->
-                            <button id="resume-button-2" onclick="window.open('Resume.pdf', '_blank')" type="button">Download Resume</button>
+                            <a href="Sakthivel_Madhu_Resume.pdf" download  id="resume-link-2">Download Resume</a>
+                            <!-- <button id="resume-button-2" onclick="window.open('Sakthivel_Madhu_Resume.pdf', '_blank')" download type="button"> Resume</button> -->
 
                         </div> 
                         <div class="home-imag padd-15">
@@ -139,7 +139,7 @@
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                                             <!-- <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-2">View Online</a>
                                             <a href="resume.pdf" download id="resume-button-2">Download PDF</a> -->
-                                            <a href="Resume.pdf" class="btn" download >Download CV</a>
+                                            <a href="Sakthivel_Madhu_Resume.pdf" class="btn" download >Download CV</a>
 
                                             <!-- <a href="resume.pdf" target="_blank" download id="resume-link-2">
                                                 <button id="resume-button-2">Download Resume</button>
@@ -763,8 +763,8 @@
                 <!-- <a href="resume.pdf" target="_blank" rel="noopener noreferrer" id="resume-link-1">View Online</a>
                 <a href="resume.pdf" download id="resume-button-1">Download PDF</a> -->
 
-
-                <button id="resume-button-1" onclick="window.open('Resume.pdf', '_blank')" type="button">Download Resume</button>
+                <a href="Sakthivel_Madhu_Resume.pdf" download  id="resume-link-2">Download Resume</a>
+                <!-- <button id="resume-button-1" onclick="window.open('Sakthivel_Madhu_Resume.pdf', '_blank')" type="button">Download Resume</button> -->
                   
 
                 <!-- <div class="row">
