--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                                 progressive organization with opportunities
                                 to work onsignificant projects.
                             </p>
-                            <!-- <a href="Sakthivel_Madhu_Resume.pdf" download  id="resume-link-2">Download Resume</a> -->
+                            <div id="resume-button-2"><a href="Sakthivel_Madhu_Resume.pdf" download  >Download Resume</a></div>
+                            
                             <!-- <button id="resume-button-2" onclick="window.open('Sakthivel_Madhu_Resume.pdf', '_blank')" download type="button"> Resume</button> -->
-                            <button id="resume-button-2" onclick="window.location.href='Sakthivel_Madhu_Resume.pdf'" type="button">Download PDF</button>
+                            <!-- <button id="resume-button-2" onclick="window.location.href='Sakthivel_Madhu_Resume.pdf'" type="button">Download PDF</button> -->
 
                         </div> 
                         <div class="home-imag padd-15">
@@ -766,8 +767,8 @@
 
                 <!-- <a href="Sakthivel_Madhu_Resume.pdf" download  id="resume-link-1">Download Resume</a> -->
                 <!-- <button id="resume-button-1" onclick="window.open('Sakthivel_Madhu_Resume.pdf', '_blank')" type="button">Download Resume</button> -->
-                <button id="resume-button-1" onclick="window.location.href='Sakthivel_Madhu_Resume.pdf'" type="button">Download PDF</button>
-
+                <!-- <button id="resume-button-1" onclick="window.location.href='Sakthivel_Madhu_Resume.pdf'" type="button">Download PDF</button> -->
+                <div id="resume-button-1"><a href="Sakthivel_Madhu_Resume.pdf" download  >Download Resume</a></div>
 
                 <!-- <div class="row">
                     <div class="col-lg-6">
