--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello" >Hello, My name is <span class="name">Sakthivel Madhu</span></h3>
+                            <h3 class="hello" id="user-detail-name">Hello, My name is <span class="name">Sakthivel Madhu</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Backend Developer</span></h3>
-                            <p >Backend developer with considerable
+                            <p id="user-detail-intro">Backend developer with considerable
                                 technical skills who possess self-discipline
                                 and the ability to work with minimum
                                 supervision. Looking forward to join a
