--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                                 to work onsignificant projects.
                             </p>
 
-                            <!-- <button id="resume-button-2" onclick="window.open('Sakthivel-Madhu-Resume.pdf', '_blank')">Open in new tab</button> -->
-                            <a id="resume-link-2" href="Sakthivel-Madhu-Resume.pdf" download>Download PDF</a>
+                            <button id="resume-button-2" onclick="window.open('https://drive.google.com/drive/folders/1i5QCkJZm5bfGe-INbt0tRNo26wzmMh-G', '_blank')">Resume</button>
 
                         </div> 
                         <div class="home-imag padd-15">
@@ -139,7 +138,8 @@
                                         <div class="buttons padd-15">
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
 
-                                            <a id="resume-link-2" href="Sakthivel-Madhu-Resume.pdf" download>Download PDF</a>
+                                            <button id="resume-button-2" onclick="window.open('https://drive.google.com/drive/folders/1i5QCkJZm5bfGe-INbt0tRNo26wzmMh-G', '_blank')">Resume</button>
+
                                               
                                             <!-- <div class="row">
                                                 <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
@@ -797,8 +797,8 @@
             <section id="resume">
                 <h2>If You Want Download My Resume, Please click here! </h2>
 
-                <!-- <button id="resume-button-1" onclick="window.open('Sakthivel-Madhu-Resume.pdf', '_blank')">Open in new tab</button> -->
-                <a id="resume-link-1" href="Sakthivel-Madhu-Resume.pdf" download>Download PDF</a>
+                <button id="resume-button-1" onclick="window.location.href='Sakthivel-Madhu-Resume.pdf'">Resume</button>
+
                 
             </section>
 
