--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                                 to work onsignificant projects.
                             </p>
 
-                            <button id="resume-button-2" onclick="window.open('https://drive.google.com/drive/folders/1i5QCkJZm5bfGe-INbt0tRNo26wzmMh-G', '_blank')">Resume</button>
-
+                            <!-- <button id="resume-button-2" onclick="window.open('https://drive.google.com/drive/folders/1i5QCkJZm5bfGe-INbt0tRNo26wzmMh-G', '_blank')">Resume</button> -->
+                            <!-- <a id="resume-link-2" href="Sakthivel-Madhu-Resume.pdf" target="_blank" download>Download my Resume</a> -->
+                            <button id="resume-button-2"> Resume</button>
                         </div> 
                         <div class="home-imag padd-15">
                             <img  src="images/professional-photo.jpg" alt="My professional photo" class="home-img">
@@ -138,8 +139,10 @@
                                         <div class="buttons padd-15">
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
 
-                                            <button id="resume-button-2" onclick="window.open('https://drive.google.com/drive/folders/1i5QCkJZm5bfGe-INbt0tRNo26wzmMh-G', '_blank')">Resume</button>
+                                            <!-- <button id="resume-button-2" onclick="window.open('https://drive.google.com/drive/folders/1i5QCkJZm5bfGe-INbt0tRNo26wzmMh-G', '_blank')">Resume</button> -->
 
+                                            <!-- <a id="resume-link-2" href="Sakthivel-Madhu-Resume.pdf" target="_blank" download> Resume</a> -->
+                                            <!-- <button id="resume-button-2">Resume</button> -->
                                               
                                             <!-- <div class="row">
                                                 <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
@@ -797,8 +800,10 @@
             <section id="resume">
                 <h2>If You Want Download My Resume, Please click here! </h2>
 
-                <button id="resume-button-1" onclick="window.location.href='Sakthivel-Madhu-Resume.pdf'">Resume</button>
+                <!-- <button id="resume-button-1" onclick="window.location.href='Sakthivel-Madhu-Resume.pdf'">Resume</button> -->
 
+                <!-- <a id="resume-link-1" href="Sakthivel-Madhu-Resume.pdf" target="_blank" download>Download PDF</a> -->
+                <button id="resume-button-1">Download PDF</button>
                 
             </section>
 
