--- a/index.html
+++ b/index.html
@@ -58,10 +58,21 @@
                                 progressive organization with opportunities
                                 to work onsignificant projects.
                             </p>
-
+                            <!-- <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a> -->
                             <!-- <button id="resume-button-2" onclick="window.open('https://drive.google.com/drive/folders/1i5QCkJZm5bfGe-INbt0tRNo26wzmMh-G', '_blank')">Resume</button> -->
                             <!-- <a id="resume-link-2" href="Sakthivel-Madhu-Resume.pdf" target="_blank" download>Download my Resume</a> -->
-                            <button id="resume-button-2"> Resume</button>
+                            <!-- <button id="resume-button-2"> Resume</button> -->
+
+                            <button id="resume-button-2">
+                                <a
+                                  id="resume-link-2"
+                                  download="Sakthivel-Madhu-Resume.pdf"
+                                  href="./Sakthivel-Madhu-Resume.pdf"
+                                  target="_blank"
+                                  >Resume</a
+                                >
+                              </button>
+
                         </div> 
                         <div class="home-imag padd-15">
                             <img  src="images/professional-photo.jpg" alt="My professional photo" class="home-img">
@@ -140,7 +151,7 @@
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
 
                                             <!-- <button id="resume-button-2" onclick="window.open('https://drive.google.com/drive/folders/1i5QCkJZm5bfGe-INbt0tRNo26wzmMh-G', '_blank')">Resume</button> -->
-
+                                            <!-- <button id="resume-button-2" onclick="window.location.href='Sakthivel-Madhu-Resume.pdf'">Resume</button> -->
                                             <!-- <a id="resume-link-2" href="Sakthivel-Madhu-Resume.pdf" target="_blank" download> Resume</a> -->
                                             <!-- <button id="resume-button-2">Resume</button> -->
                                               
@@ -803,7 +814,17 @@
                 <!-- <button id="resume-button-1" onclick="window.location.href='Sakthivel-Madhu-Resume.pdf'">Resume</button> -->
 
                 <!-- <a id="resume-link-1" href="Sakthivel-Madhu-Resume.pdf" target="_blank" download>Download PDF</a> -->
-                <button id="resume-button-1">Download PDF</button>
+                <!-- <button id="resume-button-1">Resume</button> -->
+
+                <button id="resume-button-1">
+                    <a
+                      id="resume-link-1"
+                      download="Sakthivel-Madhu-Resume.pdf"
+                      href="./Sakthivel-Madhu-Resume.pdf"
+                      target="_blank"
+                      >Resume</a
+                    >
+                  </button>
                 
             </section>
 
