--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1 id="user-detail-name">
                 Hello I'M <br>
                 SAKTHIVEL MADHU</h1>
-            <h2 id="user-details" ><span class="typing">FULL STACK WEB DEVELOPER</span> </h2>
+            <h2 id="user-details" >FULL STACK WEB DEVELOPER </h2>
             <div class="resumebtn">
                 <button id="resume-button-2" class="btn"><a id="resume-link-2" href='img/Sakthivel-Madhu-Resume.pdf'
                         target="_blank" download="Sakthivel-Madhu-Resume">RESUME</a></button>
@@ -369,12 +369,12 @@ setInterval(slides2, 1500);
 /* --------------------------------------------------GITHUB------------------------------------------------------ */
 
 
-var typed = new Typed(".typing" , {
-    strings: [""  ,"Problem Solver" ,"Continuous Learner" ,"Java Backend Developer" , "Full Stack Web Developer" ] , 
-    typeSpeed: 100,
-    BackSpeed: 60,
-    loop:true
-})
+// var typed = new Typed(".typing" , {
+//     strings: [""  ,"Problem Solver" ,"Continuous Learner" ,"Java Backend Developer" , "Full Stack Web Developer" ] , 
+//     typeSpeed: 100,
+//     BackSpeed: 60,
+//     loop:true
+// })
 </script>
 
 </html>
