--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 id="user-details" >FULL STACK WEB DEVELOPER </h2>
             <div class="resumebtn">
                 <button id="resume-button-2" class="btn"><a id="resume-link-2" href='img/Sakthivel_Madhu_Resume.pdf'
-                        target="_blank" download="Sakthivel-Madhu-Resume">RESUME</a></button>
+                        target="_blank" download="Sakthivel_Madhu_Resume">RESUME</a></button>
             </div>
 
         </div>
