added one more project

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="skills-card-name  bar">
 
             </div>
-            <div class="skills-card-img name"><img src="img/github.jpeg" alt=""></div>
+            <div class="skills-card-img name"><img src="img/hibernate-interview-questions-logo.webp" alt=""></div>
         </div>
 
     </section>
@@ -156,7 +156,24 @@
     <h1 class="mainheading">PROJECTS</h1>
     <section title="Projects" id="projects">
 
+        <!-------------------------------------------------- PROJECT 5 ---------------------------------------------------->
+        <div class="project-card">
+            <p class="project-description">MasaiBuilds - Teamiply </p>
+            <img src="img/masaibuild - teamiply.png" alt="">
+            <div class="desc">Our team management application offers a user-friendly platform to streamline communication and
+                 task management within organizations. With the ability to assign tasks and receive real-time updates, managers
+                  can stay on top of their team's progress. </div>
+            <title class="project-title">MasaiBuilds - Teamiply </title>
+            <h3 class="project-tech-stack">JAVA | JDBC | SQL | Hibernate | AWS</h3>
+            <div>
+                <p class="project-github-link"><a href="https://github.com/masai-builds/TeamiplyBackend"><i
+                            class="fa-brands fa-github"></i></a></p>
+                <p class="project-deployed-link"><a href="https://teamimply.vercel.app/"> 
+                    Live Demonstration</a>
+                </p>
+            </div>
 
+        </div>
         <!-------------------------------------------------- PROJECT 5 ---------------------------------------------------->
         <div class="project-card">
             <p class="project-description">Automation Auction System </p>
